fix hover effect for mobile + remove footer bottom on mobile

--- a/src/components/header_footer/style.css
+++ b/src/components/header_footer/style.css
@@ -78,9 +78,9 @@
 }
 
 @media (max-width: 768px) {
-  .footer-div {
+  /* .footer-div {
     bottom: 10%;
-  }
+  } */
 
   .footer-container {
     flex-direction: column;
