--- a/src/components/mobile/style.css
+++ b/src/components/mobile/style.css
@@ -64,7 +64,7 @@
   animation-delay: .8s;
 }
 
-.overlay a:hover {
+.overlay a:hover, overlay a:focus, overlay a:active {
   color: rgba(64, 201, 235, 0.884);
   transform: scale(1.03)
 }
